# ProCompta

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile  LICENCE.md  README.md  TASKS.md  docker-compose.yml  setup.sh
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  tailwind.config.js
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_init.py  20260423_0002_add_category.py  20260424_0003_add_ocr_text.py  20260424_0004_add_amount_ttc_eur.py  20260425_0005_add_archived.py  20260425_0006_add_notifications.py  20260425_0007_add_document_activity.py  20260425_0008_add_users.py  20260501_0009_add_prorata_pct.py  20260501_0010_add_prorata_activity_event.py  20260502_0011_add_gmail_and_reminders.py  20260502_0012_rename_gmail_tag_to_auto.py  20260502_0013_add_gmail_credentials_to_user.py  20260502_0014_add_gmail_code_verifier.py  20260502_0015_drop_gmail_log_unique.py  20260503_0016_add_is_paid_is_manual_nullable_files.py  20260503_0017_add_correspondent_type.py  20260503_0018_drop_user_backup_path.py
backend/app/: cleanup_storage.py  config.py  dependencies.py  document_utils.py  main.py  migrate_storage.py  seed.py  templating.py  utils.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  correspondent.py  document.py  document_activity.py  document_type.py  gmail_import_log.py  gmail_source.py  notification.py  reminder.py  tag.py  user.py
backend/app/routers/: auth.py  backup.py  correspondents.py  document_types.py  documents.py  gmail.py  notifications.py  pages.py  profile.py  reminders.py  (+1 more)
(+29 files in other folders)
