[project]
name = "procompta"
version = "0.1.0"
description = "Logiciel local de gestion documentaire comptable"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "pdf2image>=1.17.0",
    "Pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.0",
]

[tool.uv]
